--- a/iOTClient/packages.config
+++ b/iOTClient/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="C5" version="2.5.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="OptimizedPriorityQueue" version="4.2.0" targetFramework="net461" />
   <package id="WebSocketSharp-NonPreRelease" version="1.0.0" targetFramework="net461" />
 </packages>
