--- a/iOTClient/iOTClient.csproj
+++ b/iOTClient/iOTClient.csproj
@@ -76,6 +76,12 @@
     <Compile Include="frmSettings.Designer.cs">
       <DependentUpon>frmSettings.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmWorkStation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmWorkStation.Designer.cs">
+      <DependentUpon>frmWorkStation.cs</DependentUpon>
+    </Compile>
     <Compile Include="iotRobot.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -89,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmSettings.resx">
       <DependentUpon>frmSettings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmWorkStation.resx">
+      <DependentUpon>frmWorkStation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="iotRobot.resx">
       <DependentUpon>iotRobot.cs</DependentUpon>
