--- a/iOTClient/iOTClient.csproj
+++ b/iOTClient/iOTClient.csproj
@@ -64,6 +64,12 @@
     <Compile Include="ExtendedPanel.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="frmAddTransferredObject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAddTransferredObject.Designer.cs">
+      <DependentUpon>frmAddTransferredObject.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +96,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmAddTransferredObject.resx">
+      <DependentUpon>frmAddTransferredObject.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
