--- a/iOTClient/iOTClient.csproj
+++ b/iOTClient/iOTClient.csproj
@@ -160,6 +160,7 @@
     <None Include="Resources\bos.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\StartStation.png" />
     <None Include="Resources\turtlebot_2_lg_free.png" />
     <None Include="Resources\machine11.png" />
     <None Include="Resources\WaitingStationFree.png" />
@@ -176,6 +177,7 @@
     <None Include="Resources\dok-arabasi3.png" />
     <None Include="Resources\dokarabasi_free.png" />
     <None Include="Resources\archer-clipart-archery-bullseye-151.png" />
+    <None Include="Resources\FinishStation.png" />
     <Content Include="Resources\goal.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
